--- a/css/secretary.css
+++ b/css/secretary.css
@@ -334,7 +334,7 @@
           background: var(--secondary-color);
           padding: 1rem 0;
           position: sticky;
-          top: 50px;
+          top: 70px;
           z-index: 1000;
       }
       
@@ -568,6 +568,9 @@
           .social-icons a {
               font-size: 1.6rem !important;
           }
+       .secondary-nav {
+                     top: 50px;
+       }
           .secondary-nav .nav-link {
               margin: 5px 10px;
               font-size: 0.9rem;
